Fix horizontal scroll on windows

--- a/src/globals.css
+++ b/src/globals.css
@@ -6,3 +6,15 @@ body,
     margin: 0;
     box-sizing: border-box;
 }
+
+html,
+body {
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
+}
+
+#root {
+    width: 100%;
+    overflow-x: hidden;
+}
